# computerVisionUtility

./: CMakeLists.txt
src/: cvUtil.cpp  cvUtil.hpp  exifInfo.cpp  exifInfo.hpp  fileUtil.cpp  fileUtil.hpp  mathUtil.cpp  mathUtil.hpp
test/: CMakeLists.txt  cvUtilTest.cpp  exifInfoTest.cpp  fileUtilTest.cpp  mathUtilTest.cpp
